--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "13.2.4",
-    "@testing-library/jest-dom": "5.15.0",
-    "@testing-library/react": "12.1.2",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
     "@types/node": "17.0.8",
     "@types/nprogress": "0.2.0",
     "@types/react": "18.0.28",
@@ -52,8 +52,9 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.3.1",
-    "msw": "0.36.7",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "msw": "1.1.0",
     "typescript": "4.5.4"
   },
   "msw": {
