--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@supabase/supabase-js": "2.21.0",
     "@vercel/analytics": "1.0.0",
     "base64-js": "^1.5.1",
-    "bright": "^0.8.4",
+    "bright": "0.8.4",
     "classnames": "2.3.2",
     "graphql": "16.2.0",
     "graphql-tag": "2.12.6",
@@ -35,13 +35,12 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.0.3",
-    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "17.0.8",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "@types/react-syntax-highlighter": "13.5.2",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.7.0",
     "eslint-config-next": "14.0.3",
@@ -51,13 +50,18 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jsdom-testing-mocks": "1.7.0",
-    "msw": "1.1.0",
-    "postcss": "8.4.22",
-    "tailwindcss": "3.3.1",
+    "msw": "2.0.11",
+    "postcss": "^8.4.32",
+    "tailwindcss": "3.4.0",
     "ts-to-zod": "3.5.0",
     "typescript": "5.1.3"
+  },
+  "resolutions": {
+    "@babel/traverse": "7.23.2",
+    "word-wrap": "1.2.4",
+    "tough-cookie": "4.1.3"
   }
 }
